@@ -1,4 +1,4 @@
-This is jnettop 0.8.1.
+This is jnettop 0.9.
 It's a package, which should do simmilar job for network as top does for
 processes.
 
@@ -82,6 +82,30 @@ which interface to listen after you start it up. Example:
 
   interface	"eth0"
 
+Since version 0.9, jnettop supports following new keywors:
+
+  local_aggregation	[none|host|port]
+
+    this keyword sets startup local aggregation value
+    ex.
+
+      local_aggregation  port
+
+  remote_aggregation	[none|host|port]
+
+    this keyword sets startup remote aggregation value
+    ex.
+
+      remote_aggregation host
+
+  select_rule	"<name>"
+
+    this keywors sets rule, that is enabled on startup
+    name is the name of previously(!) defined rule (by "rule" keyword)
+    ex.
+
+      select_rule "source is intranet"
+
 The pathname of configuraton file can be overrided by specifying -f command
 line parameter.
 
@@ -163,5 +187,5 @@ Copyright (C) 2002, 2003 Jakub Skopal
 Portions of the package are taken from the tcpdump project and their rights are
 held by their respective owners stated in the beginning of the files.
 
-$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/README,v 1.11 2003-04-24 12:24:26 merunka Exp $
+$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/README,v 1.12 2003-07-30 10:38:15 merunka Exp $
 
