@@ -1,3 +1,7 @@
+2003-07-30:	Added "-p" command line parameter (promiscuous mode)
+		Added "local_aggregation", "remote_aggregation" and "select_rule" keywords to config file (see README)
+		Added "--local-aggr", "--remote-aggr" and "-s" command line parameters
+
 2003-04-23:	Added man page
 
 2003-04-16:	Added "interface" keyword
@@ -19,4 +23,4 @@
 
 2002-08-22:	The package is entirely new.
 
-$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/NEWS,v 1.6 2003-04-23 06:58:38 merunka Exp $
+$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/NEWS,v 1.7 2003-07-30 10:38:15 merunka Exp $
